--- a/outils/club_maths/index.html
+++ b/outils/club_maths/index.html
@@ -208,7 +208,7 @@
     </div>
 
     <footer>
-        &copy; Club Maths - Activités Interactives
+        &copy; Club Maths - Activités 
     </footer>
 
 </body>
