--- a/outils/club_maths/jeu_du_chaos.html
+++ b/outils/club_maths/jeu_du_chaos.html
@@ -33,7 +33,24 @@
             padding: 20px;
             text-align: center;
             border-bottom: 4px solid var(--primary);
+            position: relative;
         }
+
+        /* Bouton Retour Accueil */
+        .home-link {
+            position: absolute;
+            left: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #888;
+            text-decoration: none;
+            font-size: 0.9rem;
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            transition: color 0.2s;
+        }
+        .home-link:hover { color: white; }
 
         header h1 { margin: 0; font-weight: 300; letter-spacing: 1px; }
         header .subtitle { color: var(--primary); font-weight: bold; margin-top: 5px; display: block;}
@@ -203,6 +220,7 @@
 
     <div class="screen-wrapper">
         <header>
+            <a href="index.html" class="home-link">🏠 Retour au Club</a>
             <h1>CLUB MATHS</h1>
             <span class="subtitle">Activité 2 : Le Jeu du Chaos (Fractales)</span>
         </header>
