--- a/outils/index.html
+++ b/outils/index.html
@@ -20,6 +20,7 @@
   --c-yellow: #d97706; /* Bouliers */
   --c-purple: #9333ea; /* Diagrammes */
   --c-green: #16a34a;  /* Relatifs */
+  --c-indigo: #6366f1; /* Club Maths */
 }
 
 *{box-sizing:border-box}
@@ -120,6 +121,7 @@ a.card[data-color="conversions"]:hover { border-top-color: var(--c-orange); }
 a.card[data-color="bouliers"]:hover    { border-top-color: var(--c-yellow); }
 a.card[data-color="diagrammes"]:hover  { border-top-color: var(--c-purple); }
 a.card[data-color="relatifs"]:hover    { border-top-color: var(--c-green); }
+a.card[data-color="club"]:hover        { border-top-color: var(--c-indigo); }
 
 .card-title {
   display: flex;
@@ -186,11 +188,12 @@ footer {
       <p class="card-desc">Générateur de schémas et de problèmes mathématiques.</p>
     </a>
 
-    <!-- 5. Relatifs
-    <a class="card" href="relatifs/" data-color="relatifs">
-      <div class="card-title">🔴🟢 Relatifs</div>
-      <p class="card-desc">Activités de manipulation pour appréhender les nombres relatifs.</p>
-    </a> -->
+    <!-- 5. Club Maths (NOUVEAU) -->
+    <a class="card" href="club_maths/index.html" data-color="club">
+      <div class="card-title">✨ Club Maths</div>
+      <p class="card-desc">Exploration & Jeux</p>
+    </a>
+
 
   </section>
   
