--- a/outils/plateaux_manipulation/bandes_fractions.html
+++ b/outils/plateaux_manipulation/bandes_fractions.html
@@ -645,15 +645,19 @@
           <div class="font-extrabold text-slate-800">Manipulation</div>
           <ul class="list-disc pl-5 space-y-1">
             <li><b>Main</b> : cliquer une bande pour la sélectionner, puis <b>glisser</b> pour déplacer.</li>
+            <li><b>Double-clic</b> sur une bande : la <b>retourner</b> (recto/verso).</li>
+            <li><b>Ctrl/Cmd + glisser sur le vide</b> : sélectionner plusieurs bandes via un rectangle.</li>
             <li><b>Glisser sur le vide</b> : déplace le plateau (panoramique).</li>
             <li><b>Molette</b> : zoom autour du pointeur (plus précis en projection).</li>
+            <li><b>Crayon</b> : cliquer-glisser pour dessiner (stylet OK) ; <b>clic droit</b> pour déplacer le plateau / les bandes.</li>
+            <li><b>Demi-droite</b> (si affichée) : glisser la flèche pour changer la longueur, <b>double-clic</b> pour revenir au réglage par défaut.</li>
           </ul>
         </div>
 
         <div class="grid gap-2">
           <div class="font-extrabold text-slate-800">Raccourcis essentiels</div>
           <ul class="list-disc pl-5 space-y-1">
-            <li><b>Ctrl+Z</b> (ou ⌘Z) : annuler la dernière action.</li>
+            <li><b>Ctrl+Z</b> (ou ⌘Z) : annuler la dernière action (en mode crayon : annule le dernier trait).</li>
             <li><b>Ctrl/Cmd + clic</b> (ou <b>Shift + clic</b>) : sélectionner plusieurs bandes (re-clic pour enlever).</li>
             <li><b>Suppr</b> (Delete / Backspace) : supprimer la/les bandes sélectionnées.</li>
             <li><b>Échap</b> : désélectionner.</li>
@@ -664,7 +668,7 @@
           <div class="font-extrabold text-slate-800">Raccourcis “prof”</div>
           <ul class="list-disc pl-5 space-y-1">
             <li><b>D</b> : dupliquer la/les bandes sélectionnées.</li>
-            <li><b>T</b> : tourner / retourner la/les bandes sélectionnées.</li>
+            <li><b>T</b> : retourner (recto/verso) la/les bandes sélectionnées.</li>
             <li><b>S</b> : séparer (si bande découpée en parts).</li>
             <li><b>C</b> : couper (si possible).</li>
             <li><b>F</b> : fusionner (sur pièces compatibles).</li>
