--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -273,9 +273,9 @@
             <div class="filters">
                 <span class="chip active" data-filter="all">Tout</span>
                 <span class="chip" data-filter="relatifs">Relatifs</span>
-                <span class="chip" data-filter="geometrie">Géométrie</span>
                 <span class="chip" data-filter="fractions">Fractions</span>
-                <span class="chip" data-filter="algebre">Algèbre</span>
+                <span class="chip" data-filter="puissances">Puissances</span> <span class="chip" data-filter="algebre">Algèbre</span>
+                <span class="chip" data-filter="geometrie">Géométrie</span>
                 <span class="chip" data-filter="mesures">Mesures</span>
                 <span class="chip" data-filter="donnees">Données</span>
             </div>
@@ -353,6 +353,11 @@
             <a href="moyennes.html" class="choice-card" data-tags="donnees statistique">
                 <div class="icon-wrapper"><i data-lucide="bar-chart-3"></i></div>
                 <h2 class="card-title">Moyennes</h2>
+            </a>
+
+            <a href="feuille_coupee_puissance.html" class="choice-card" data-tags="puissances exposant">
+                <div class="icon-wrapper"><i data-lucide="scissors"></i></div>
+                <h2 class="card-title">Puissances : Feuille coupée</h2>
             </a>
 
             <a href="ratio.html" class="choice-card" data-tags="donnees proportionnalite">
